--- a/part2/countries/src/index.css
+++ b/part2/countries/src/index.css
@@ -3,9 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-image: linear-gradient(#08348770, #e983645b, #08348770);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +23,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -33,6 +30,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+li {
+  font-size: 0.9em;
 }
 
 button {
