updated styles & minor fix

--- a/part2/countries/src/index.css
+++ b/part2/countries/src/index.css
@@ -3,7 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-image: linear-gradient(#08348770, #e983645b, #08348770);
+  background-color: rgba(2, 15, 58, 0.855);
+  background-size: cover;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,8 +24,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  place-items: center;
   min-height: 100vh;
+  color: #f4f3f3;
 }
 
 h1 {
@@ -36,34 +38,50 @@ li {
   font-size: 0.9em;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.appTitle {
+  font-size: 4em;
+  font-weight: 100;
+  text-shadow: 0.1px 0.1px 2px #f4f3f3;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.appTitleHead {
+  color: #5cec4f;
+  text-shadow: 0.1px 0.1px 2px #5cec4f;
+}
+
+.filterBar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  font-weight: 300;
+  text-shadow: 0.1px 0.1px 1px #f4f3f3;
+}
+
+.searchInput {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: #000000;
+  box-sizing: border-box;
+  border-width: 0.1rem;
+  border-radius: 1rem;
+  border-color: #21f20e44;
+  padding: 0.5rem 0.8rem;
+}
+
+.searchInput:focus {
+  border-width: 0.1rem;
+  border-radius: 1rem;
+}
+
+.countryList {
+  text-align: center;
+  font-weight: 300;
+}
+
+.countryContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: space-evenly;
+  text-shadow: 0.1px 0.1px 2px #f4f3f3;
 }
