--- a/part2/countries/src/index.css
+++ b/part2/countries/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: rgba(2, 15, 58, 0.855);
+  background-color: #020f3ada;
   background-size: cover;
 
   font-synthesis: none;
@@ -74,8 +74,29 @@ li {
 }
 
 .countryList {
-  text-align: center;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  gap: 1rem;
   font-weight: 300;
+  text-align: left;
+}
+
+.listBtn {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  border-width: 0.1rem;
+  border-radius: 1rem;
+  color: #020f3a;
+  background-color: #f8e61cd2;
+  border-color: #f8e61c47;
+  padding: 3px 1rem;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.listBtn:hover {
+  box-shadow: 0.1px 0.1px 5px #f6f0b16e;
+  cursor: pointer;
 }
 
 .countryContainer {
@@ -84,4 +105,17 @@ li {
   gap: 1rem;
   justify-content: space-evenly;
   text-shadow: 0.1px 0.1px 2px #f4f3f3;
+}
+
+.loadingIcon {
+  animation: rotate 2s linear infinite; /* Adjust duration and timing function as needed */
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
